# Qa-bot

./: .env.example  .gitignore  Aptfile  Procfile  README.md  pyproject.toml
docs/deploy/: heroku-runbook.md
docs/plans/: 2026-04-25-001-feat-qa-bot-web-monitoring-plan.md
docs/residual-review-findings/: fdc7f4b.md  feat-dual-model-vision-text-analysis.md  master.md
docs/solutions/tooling-decisions/: heroku-playwright-deployment-2026-04-27.md
src/qa_bot/: __init__.py  config.py  database.py  db_models.py  fetcher.py  llm_evaluator.py  main.py  models.py  orchestrator.py  preprocessor.py  reporter.py  rules.py  scheduler.py  settings_manager.py  state.py  ui.py  ui_dashboard.py  ui_helpers.py  ui_layout.py  ui_scan.py  ui_settings.py  ui_sites.py
src/qa_bot/core/: __init__.py  config.py
src/qa_bot/db/: __init__.py  database.py  models.py
src/qa_bot/domain/: __init__.py  models.py
src/qa_bot/services/: __init__.py  auth.py  fetcher.py  llm_evaluator.py  orchestrator.py  preprocessor.py  reporter.py  rules.py  scheduler.py  state.py
src/qa_bot/ui/: __init__.py  admin_users.py  auth.py  dashboard.py  helpers.py  layout.py  scan.py  settings.py  sites.py
tests/: test_auth.py  test_auth_hardening.py  test_config_production_validation.py  test_database.py  test_db_models.py  test_docs_config_alignment.py  test_fetcher.py  test_heroku_runtime_contract.py  test_llm_evaluator.py  test_models.py  test_orchestrator.py  test_playwright_runtime_readiness.py  test_preprocessor.py  test_rules.py
