[project]
name = "qa-bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "gradio>=6.13.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "openrouter>=0.9.1",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "pyrate-limiter>=4.1.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
]
