[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qa-bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "gradio>=6.13.0",
    "httpx>=0.28.1",
    "litellm>=1.83.0",
    "lxml>=6.1.0",
    "openrouter>=0.9.1",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.12.1",
    "pyrate-limiter>=4.1.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qa_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
